@startuml
PrimitiveType -up-|> DynamicType
AggregationType -up-|> DynamicType
CollectionType -up-|> DynamicType

StructType -up-|> AggregationType

ArrayType -up-|> CollectionType
MutableCollectionType -up-|> CollectionType

StringType -up-|> MutableCollectionType
WStringType -up-|> MutableCollectionType
SequenceType -up-|> MutableCollectionType

abstract DynamicType
abstract AggregationType
abstract CollectionType
abstract MutableCollectionType
class PrimitiveType<T>
@enduml
